--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <p class="subtitle">Esses passos já possuem uma documentação disponivel no <a href="https://github.com/" target="_blank">GitHub Docs</a>.</p>
             <ol>
                 <li>
-                    <a href="https://docs.github.com/pt/github/getting-started-with-github/create-a-repo" target="_blank">Criar um repositório privado</a>:
-                    <p> Para criar um repositório, será utilizada a própria plataforma do GitHub. Também é possível criar um novo repositório utilizando a interface gráfica para Git, o GitKraken, seguindo o procedimento disponivel <a href="https://support.gitkraken.com/working-with-repositories/open-clone-init/" target="_blank">aqui</a>.</p>
+                    <a href="https://docs.github.com/pt/github/getting-started-with-github/create-a-repo" target="_blank">Criar um repositório</a>:
+                    <p> Para criar um repositório, será utilizada a própria plataforma do GitHub. Também é possível criar um novo repositório utilizando a interface gráfica para Git, o GitKraken, seguindo o procedimento disponivel <a href="https://support.gitkraken.com/working-with-repositories/open-clone-init/" target="_blank">aqui</a>. O repositório pode ser criado de forma pública, porém no processo de deploy na plataforma heroku, é necessário que o repositório seja privado.</p>
                 </li>
                 <li>
                     <a href="https://docs.github.com/pt/github/authenticating-to-github/creating-a-personal-access-token" target="_blank">Criar um token para acesso pessoal</a>:
@@ -93,15 +93,25 @@
                 </li>
             </ol>
 
-            <h2>Adicionando o pacote json2dash ao seu ambiente virtual conda</h2>
-            <!-- <p class="subtitle">Esses passos.</p> -->
+            <h2>Instalação do Pacote json2dash</h2>
+            <p class="subtitle">Adicionando o pacote json2dash ao seu ambiente virtual conda com o seu ambiente virtual conda ativado.</p>
 
-            <h4>Ative o seu ambiente conda</h4>
-            <p>Para isso, com o seu terminar aberto, execute a seguinte linha:</p>
+            <p>Caso você já tenha um ambiente virtual em sua máquina, com o seu terminar aberto, execute a seguinte linha:</p>
 
             <pre>
-                <code>conda activate [nomeDoSeuAmbiente]</nomeDoSeuAmbiente></code>
+                <code>conda activate nomeDoSeuAmbiente</nomeDoSeuAmbiente></code>
             </pre>
+
+            <p>Caso não, você pode criar um ambiente igual ao utilizado para o desenvolvimento do pacote. É necessário que seja feito o <em>download</em> do arquivo abaixo e com o seu terminar aberto, execute a seguinte linha:</p>
+
+            <p class="note">Para mais informações, acesse a página <a href="https://conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html#creating-an-environment-from-an-environment-yml-file">Managing Environments</a>.</p>
+            <pre>
+                <code>conda env create -f environment.yml</nomeDoSeuAmbiente></code>
+            </pre>
+            <p class="code-download">
+                <a href="./exemplo_dashboard/apps/exemplo.json" download="environment.yml">Download do arquivo environment.yml
+                </a>
+            </p>
 
             <p>Logo após, você pode instalar o pacote de duas formas:</p>
             <p class="note">Utilizando o instalador de pacotes pip diretamente.</p>
@@ -112,74 +122,18 @@
             <pre>
                 <code>pip install -r requirements.txt</code>
             </pre>
+            <p class="code-download">
+                <a href="./exemplo_dashboard/apps/exemplo.json" download="requirements.txt">Download do arquivo requirements.txt
+                </a>
+            </p>
+
+            <p class="note"><strong>Obs.:</strong> Caso ocorra algum erro no processo de instalação do pacote <code>geopandas</code>, acesse o <a href="https://geopandas.org/getting_started/install.html">site</a> com o procedimento de instalação do pacote e todas suas dependências no ambiente virtual conda.</p>
 
             <p>Para verificar se o ambiente foi criado corretamente, execute no seu terminal</p>
             <pre>
                 <code>conda info --envs</code>
                 
             </pre>
-
-            <h4>Algumas outras dependências necessitam serem instaladas durante o processo de deploy da aplicação na plataforma de hospedagem Heroku e para isso, crie um arquivo <code>requirements.txt</code> com o conteúdo abaixo dentro de seu repositório.</h4>
-            <pre>
-                <code>astroid==2.4.1
-attrs==19.3.0
-bokeh==2.2.3
-branca==0.4.1
-Brotli==1.0.7
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-click-plugins==1.1.1
-cligj==0.5.0
-colorama==0.4.3
-dash==1.16.2
-dash-core-components==1.12.1
-dash-html-components==1.1.1
-dash-renderer==1.8.2
-dash-table==4.10.1
-Fiona==1.8.13
-Flask==1.1.2
-Flask-Compress==1.5.0
-folium==0.11.0
-future==0.18.2
-geopandas
-gunicorn==20.0.4
-idna==2.10
-isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.11.2
-lazy-object-proxy==1.4.3
-MarkupSafe==1.1.1
-mccabe==0.6.1
-munch==2.5.0
-numpy
-packaging==20.7
-pandas==1.1.3
-Pillow==8.0.1
-plotly==4.14.3
-pyarrow==2.0.0
-pylint==2.5.2
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.1
-PyYAML==5.3.1
-requests==2.24.0
-retrying==1.3.3
-scipy==1.6.1
-Shapely==1.7.0
-six
-toml==0.10.0
-tornado==6.1
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
-urllib3==1.25.9
-Werkzeug==1.0.1
-wincertstore==0.2
-wrapt==1.12.1
-xlrd==1.2.0</code>
-            </pre>
-
-            <p class="note"><strong>Obs.:</strong> Caso ocorra algum erro no processo de instalação do pacote <code>geopandas</code>, acesse o <a href="https://geopandas.org/getting_started/install.html">site</a> com o procedimento de instalação do pacote e todas suas dependências no ambiente virtual conda.</p>
 
             
             <h2>Projeto Básico com o Pacote Json2dash</h2>
