application example link
https://first-steps-json2dash.herokuapp.com/

--- a/index.html
+++ b/index.html
@@ -323,8 +323,7 @@
                 <code>python index.py</code>
             </pre>
 
-            <h3 style="text-align: center;">Acesse a aplicação hospedada no Heroku <a href="#">aqui</a>.</h3>
-            <p class="note"><strong>Obs.:</strong> Ainda não foi feito!</p>
+            <h3 style="text-align: center;">Acesse a aplicação hospedada no Heroku <a href="https://first-steps-json2dash.herokuapp.com/" target="_blank">aqui</a>.</h3>
 
         </div>
 
