--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <code>conda env create -f environment.yml</nomeDoSeuAmbiente></code>
             </pre>
             <p class="code-download">
-                <a href="./exemplo_dashboard/apps/exemplo.json" download="environment.yml">Download do arquivo environment.yml
+                <a href="./exemplo_dashboard/environment.yml" download="environment.yml">Download do arquivo environment.yml
                 </a>
             </p>
 
